styles/Home.module.css
.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  display: block;
  width: 100%;
  height: 100%;
  position: relative;
  z-index: 0;
}

.topBg {
  width: 100%;
  height: 100%;
}

.bottomBg {
  width: 100%;
  height: 100%;
  margin-top: -280px;
  background-color: #b51017;
}

.mainContent {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  left: 0;
  top: 0;
  overflow: auto;
}

.contentWrapper {
  width: 100%;
  height: 100%;
  padding: 0 10rem;
  max-width: 1440px;
  position: absolute;
  left: 50%;
  -webkit-transform: translate(-50%, 0%);
  -ms-transform: translate(-50%, 0%);
  transform: translate(-50%, 0%);
}

.logoWrapper {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-top: 20px;
}

.pubgLogo {
  width: 92px;
  height: 68px;
}

.doritosLogo {
  width: 174px;
  height: 137px;
}

.banner {
  display: flex;
  justify-content: center;
  margin-top: 200px;
}

.banner img {
  width: 1062px;
  height: 388px;
}

.freeItemTxt {
  display: flex;
  justify-content: center;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  padding-top: 20px;
  font-size: 28px;
  font-weight: 500;
  line-height: 1.29;
  text-align: center;
  color: #e8ac18;
}

.mainTxtWrapper {
  display: flex;
  justify-content: center;
  padding: 0 0.5rem;
  margin-top: 8px;
}

.mainTxt {
  width: 100%;
  padding: 40px 56px;
  border-radius: 20px;
  background: rgba(0, 0, 0, 0.4);
  color: #ffffff;
  font-size: 28px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.64;
  text-align: center;
}

.highlightTxt {
  color: #e8ac18;
  font-size: 32px;
}

.dateTxt {
  font-weight: 300;
  margin-top: 20px;
}

.noteWrapper {
  display: flex;
  justify-content: center;
}

.note {
  margin-top: 20px;
  font-size: 17px;
  font-weight: 300;
  color: #ffffff;
}

.topTxt {
  padding-bottom: 16px;
}

.note ul {
  margin: 0;
  padding: 0;
}
.note li {
  margin-left: 20px;
}

.footer {
  display: flex;
  justify-content: center;
  margin-top: 40px;
  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 20px;
}

.footer img {
  width: 100%;
  height: auto;
}

@media (max-width: 1024px) {
  .contentWrapper {
    padding: 0 2rem;
  }

  .pubgLogo {
    width: 85px;
    height: 63px;
  }

  .doritosLogo {
    width: 149px;
    height: 117px;
  }

  .banner img {
    width: 867px;
    height: 328px;
  }
}

@media (max-width: 760px) {
  .contentWrapper {
    padding: 0 1rem;
  }

  .bottomBg {
    margin-top: -60px;
  }

  .pubgLogo {
    width: 40px;
    height: 30px;
  }

  .doritosLogo {
    width: 66px;
    height: 52px;
  }

  .banner img {
    width: 414px;
    height: 146px;
  }

  .banner {
    margin-top: 110px;
  }

  .freeItemTxt {
    padding-right: 0rem;
    padding-left: 0rem;
    padding-top: 15px;
    font-size: 22px;
    font-weight: 500;
    line-height: 1.25;
  }

  .mainTxtWrapper {
    padding: 0;
    margin-top: 8px;
  }

  .mainTxt {
    padding: 24px 16px;
    border-radius: 14px;
    font-size: 20px;
    line-height: 1.27;
  }

  .highlightTxt {
    font-size: 24px;
  }

  .dateTxt {
    font-weight: 300;
    font-size: 20px;
    margin-top: 16px;
  }

  .note {
    margin-top: 16px;
    font-size: 14px;
    font-weight: 300;
    color: #ffffff;
  }

  .footer {
    padding: 0;
    margin-top: 16px;
    padding-bottom: 8px;
  }
}

